# stock_data_pipelines

./: .gitignore  ANNOUNCEMENT_MODULE_UPDATE.md  CLAUDE.md  Load_into_db.ipynb  README.md  STRATEGY_LAB_IMPLEMENTATION_PLAN.md  config.py  fetch_data_from_screener_db.ipynb  fetch_fundamental_data.ipynb  implementation_plan.md  implementation_plan1  paths.py  pyproject.toml  requirements.txt  stock_backend.spec  walkthrough.md
ai-hedge-fund/: README.md  hedge_fund_db.py
ai-hedge-fund/src/: main.py  services.py
ai-hedge-fund/src/agents/: portfolio_manager.py
ai-hedge-fund/src/backtesting/: metrics.py  types.py
ai-hedge-fund/src/tools/: api.py  data_bridge.py
announcement_fetcher/: README.md  fetcher.py  helper.py  pdf_utils.py  slack_utils.py  summarize.py
apps/desktop_app/: main.js  splash.html
apps/web_app/: README.md  app.css  app.js  index.html
apps/web_app/css/: base.css  compare.css  hedgefund.css  layout.css  news.css  responsive.css  screener.css  strategy-lab.css  toolbar.css  watchlist.css
apps/web_app/js/: compare.js  hedgefund.js  news.js  screener.js  state.js  strategy-editor.js  strategy-lab.js  strategy-signals.js  strategy-split-layout.js  strategy-storage.js  symbol-modal.js  theme.js  utils.js  watchlist.js
apps/web_app/partials/: hedgefund-view.html  news-view.html  prompt-modal.html  screener-view.html  strategy-lab-view.html  watchlist-panel.html
apps/web_app/server/: __init__.py  adapters.py  app.py  handler.py  (+7 more)
build_scripts/: build_desktop.py  package_python.py
config/: paths.py
db/: common.py  db_schema.py  db_schema.sql  db_utils.py  fundamentals.duckdb  setup_db.py
docs/: STRATEGY_LAB_IMPLEMENTATION_GUIDE.md  STRATEGY_LAB_USER_GUIDE.md
electron/: main.js  preload.js
experiments/: IMPLEMENTATION_PROGRESS.md  TRADINGVIEW_UI_NOTES.md
market_data/: config.py  db_utils.py  instrument_loader.py  logger.py  main.py  readme.md  reprocess_failed_symbols.py  updater.py  yfinance_fetch.py
notebooks/: Fetch_all_stock_list.ipynb  fetch_data_from_screener_db.ipynb  fetch_fundamental_data.ipynb
scratch/: check_db.py
screener_client/: api_async.py  api_parsers.py  api_urls.py  build_urls.py  company_retry.py  config.py  fetch.py  helper.py  html_scraper.py  readme.md  requirements.txt  scrape_from_csv.py
stock_data_pipelines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tradingview_ui/: app.css  app.js  datafeed.js  hedgefund.js  index.html  server.py
tradingview_ui/css/: base.css  hedgefund.css  layout.css  modal.css  toolbar.css  watchlist.css
tradingview_ui/js/: news.js  theme.js
tradingview_ui/partials/: hedgefund-view.html  news-view.html  symbol-modal.html  watchlist-panel.html
tradingview_ui/server/: __main__.py  app.py  constants.py  handler.py  routes_announcements.py  routes_core.py  screener.py  utils.py
utils/: screener_utils.py
