[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_data_pipelines"
version = "1.0.0"
description = "Stock research, screening, announcements, and hedge fund AI insights platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "beautifulsoup4",
    "pandas",
    "duckdb",
    "yfinance",
    "playwright",
    "scikit-learn",
    "pandas_ta",
    "plotly",
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-groq",
    "langchain-deepseek",
    "langchain-ollama",
    "langchain-google-genai",
    "langchain-xai",
    "langchain-gigachat",
    "langgraph",
    "numpy",
    "python-dotenv",
    "matplotlib",
    "tabulate",
    "colorama",
    "questionary",
    "rich",
    "fastapi",
    "pydantic",
    "httpx",
    "sqlalchemy",
    "alembic",
    "scipy",
    "transformers",
    "pdfminer.six",
    "selenium",
    "webdriver-manager",
    "requests",
    "slack_sdk"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "pytest",
    "pyinstaller"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*", "config*"]
